Side menu color fixed

--- a/_sass/_members.scss
+++ b/_sass/_members.scss
@@ -422,7 +422,7 @@
 }
 
 .member-menu-btn.active {
-    background-color: #f2f2f2;
+    background-color: #e8e8e8;
     color: var(--primary-color);
     font-weight: 700;
 }
