--- a/_sass/_publications.scss
+++ b/_sass/_publications.scss
@@ -158,7 +158,7 @@
 .publication-menu-btn {
     width: 100%;
     padding: 14px 20px;
-    background-color: #e8e8e8;
+    background-color: var(--bg-color);
     border: none;
     border-bottom: 1px solid #d0d0d0;
     color: var(--primary-color);
@@ -171,18 +171,18 @@
 }
 
 .publication-menu-btn:hover {
-    background-color: #d8d8d8;
+    background-color: #f2f2f2;
     color: var(--primary-color);
 }
 
 .publication-menu-btn.active {
-    background-color: white;
+    background-color: #e8e8e8;
     color: var(--primary-color);
     font-weight: 700;
 }
 
 .publication-menu-btn.active:hover {
-    background-color: white;
+    background-color: #f2f2f2;
     color: var(--primary-color);
 }
 
